--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 models/**/*.* filter=lfs diff=lfs merge=lfs -text
 models/models--google--flan-t5-base/** filter=lfs diff=lfs merge=lfs -text
 models/models--google--flan-t5-base/** filter=lfs diff=lfs merge=lfs -text
+models/** filter=lfs diff=lfs merge=lfs -text
